# pyqtcli

./: .gitignore  LICENSE  README.md  dev_requirements.txt  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
pyqtcli/: QtWidgets.py  __init__.py  __init__.pyi  _widgets.py  argparser.py  argparser.pyi
