[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pqtcli"
version = "0.1.0"
#description = ""
#readme = "README.md"
authors = [
    {name = "Маг Ильяс DOMA (MagIlyasDOMA)", email = "magilyas.doma.09@list.ru"},
]
license = {text = "MIT"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: Microsoft :: Windows :: Windows 11",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Framework :: Django",
    "Framework :: Django :: 5.2",
    "Framework :: Django :: 6.0",
    "Natural Language :: English",
    "Natural Language :: Russian",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Security :: Cryptography",
    "Topic :: Text Processing :: Markup",
    "Topic :: Text Processing :: Markup :: HTML",
]
requires-python = ">=3.9"
dynamic = ["optional-dependencies"]
dependencies = ["argparse-typing>=0.2.0"]

[project.optional-dependencies]
pyside = ["Pyside2>=5.12.0"]
pyside2 = ["Pyside2>=5.12.0"]
pyside6 = ["Pyside6>=6.0.0"]
pyqt = ["PyQt5>=5.0.0"]
pyqt5 = ["PyQt5>=5.0.0"]
pyqt6 = ["PyQt6>=6.0.0"]

[project.urls]
Source = "https://github.com/MagIlyasDOMA/pyqtcli"
Repository = "https://github.com/MagIlyasDOMA/pyqtcli.git"

[tool.setuptools]
packages = {find = {}}

[tool.setuptools.dynamic.optional-dependencies]
dev = {file = ["requirements/dev_requirements.txt"]}
